$Id$

MIDIbox NG V1.009
~~~~~~~~~~~~~~~~~

   o with a button assigned to 'type=Meta meta=MidiLearn range=0:1' it's now possible
     to activate a MIDI Learn mode which allows to assign an incoming MIDI event to any
     control element

   o with 'type=Meta meta=MidiLearn range=0:2' also NRPN events can be learned (in this case,
     CC#62 and CC#63 will be ignored!)


MIDIbox NG V1.008
~~~~~~~~~~~~~~~~~

   o DIN_MATRIX with rows=4 now properly supported

   o DIN_MATRIX/DOUT_MATRIX: it's now possible to invert the rows as well:
     inverted=1 or inverted_sel=1 will invert the selection lines
     inverted_row=1 will invert the row pattern

   o configuration examples for the 16x4 Button/Duo-LED matrix are now
     available under cfg/tests/blm16x4*.ngc


MIDIbox NG V1.007
~~~~~~~~~~~~~~~~~

   o changed bank concept: the BANK command has been removed, instead the EVENT
     command got a new "hw_id" and "bank" parameter.
     A simple configuration example can be found under cfg/tests/encbanks.ngc
     More complex configuration examples under cfg/tests/bnk*.ngc

   o added meta=CycleBank (increments bank, resets to 1 if last bank reached)

   o additional new metas: SetBankOfHwId, DecBankOfHwId, IncBankOfHwId, CycleBankOfHwId


MIDIbox NG V1.006
~~~~~~~~~~~~~~~~~

   o corrected LED pattern output for the case that the selection lines are inverted.

   o the new SCS command allows to assign emulated button/encoder functions if the SCS
     shows the mainpage.
     A usage example can be found under cfg/templates/lre8x2.ngc


MIDIbox NG V1.005
~~~~~~~~~~~~~~~~~

   o support for value MAPs.
     Various examples can be found under cfg/tests/map*.ngc

   o support for EVENT_CV
     Various examples can be found under cfg/tests/cv*.ngc

   o AINSER modules now disabled after RESET_HW
     They have to be explicitely enabled with the AINSER command

   o the AINSER command now supports the "resolution" and "num_pins" parameters


MIDIbox NG V1.004